[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous pretraining research swarm"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "flash-attn>=2.8.3",
    "kernels>=0.11.7",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "torch==2.9.1",
]

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]
no-build-package = ["flash_attn"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]
flash_attn = [
    { url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.7.16/flash_attn-2.8.3%2Bcu130torch2.9-cp313-cp313-linux_aarch64.whl", marker = "platform_machine == 'aarch64'" },
    { url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.9.0/flash_attn-2.8.3%2Bcu130torch2.9-cp313-cp313-linux_x86_64.whl", marker = "platform_machine == 'x86_64'" },
]

# [tool.uv.extra-build-dependencies]
# flash-attn = ["torch", "nvidia-cuda-nvcc"]

# [tool.uv.extra-build-variables]
# flash-attn = { MAX_JOBS = "1", TORCH_CUDA_ARCH_LIST = "7.0;7.5;8.0;8.6;8.9;9.0" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true


[tool.cluv]
clusters = [
    "mila",
    "tamia",
    "narval",
    "rorqual",
    "fir",
    # "nibi",  getting weird errors with nibi, (bash: line 1: git-receive-pack: command not found)
    "killarney",
    "vulcan",
    # "trillium",
    "trillium-gpu",
]
results_path = "logs" # Relative path where results are stored.
